Make unit tests running (in quick'n dirty way).

--- a/testdata/zorka.conf
+++ b/testdata/zorka.conf
@@ -1,6 +1,6 @@
 {
  :zico-db {
-           :subname "file:/tmp/zico-collector-test/data/conf.db;DATABASE_TO_UPPER=false;QUERY_STATISTICS=true"
+           :subname "mem:test;DATABASE_TO_UPPER=false;QUERY_STATISTICS=true"
            }
  :trace-store {
                :path "/tmp/zico-collector-test/data/trace"
