Fix default startup configuration.
Make sure all data/log directories are related to zico.home.
Make sure collector starts properly without zico.conf.

--- a/resources/zico/zico.conf
+++ b/resources/zico/zico.conf
@@ -13,7 +13,7 @@
  {
   :level :info
   :main
-  {:path "log/zico.log"
+  {:path "${zico.home}/log"
    :backlog 8
    :max-size 16777216
   }
@@ -23,7 +23,7 @@
 
  ; Configuration of main data store
  :trace-store {
-               :path "data/trace"
+               :path "${zico.home}/data/trace"
                :nthreads 1         ; number of indexer threads (0 = run indexing in current thread);
                :session-timeout 120
 
@@ -51,7 +51,7 @@
            :classname "org.h2.Driver"
            :subprotocol "h2"
            ;:subname "mem:test;DATABASE_TO_UPPER=false;QUERY_STATISTICS=true"
-           :subname "file:./data/conf/config.db;DATABASE_TO_UPPER=false;QUERY_STATISTICS=true"
+           :subname "file:${zico.home}/data/conf/config.db;DATABASE_TO_UPPER=false;QUERY_STATISTICS=true"
            :user "sa"
            :password ""
            :host "localhost"
@@ -62,7 +62,7 @@
 
  ; Automated backup of configuration database and discovered items
  :backup-conf {
-               :path "data/backup"
+               :path "${zico.home}/data/backup"
                :history 8
                }
 
