Move config data initialization from flyway schema to external files.

--- a/resources/zico/zico.conf
+++ b/resources/zico/zico.conf
@@ -60,6 +60,12 @@
            :mysql "/usr/bin/mysql"
            }
 
+ ; Database initialization options
+ :zico-db-init {
+                :source :all                       ; Source: :internal, :external, :all
+                :mode :append                           ; Mode: :append, :overwrite, :skip
+                }
+
  ; Automated backup of configuration database and discovered items
  :backup-conf {
                :path "${zico.home}/data/backup"
