TLS support (for now via Jetty container).

--- a/resources/zico/zico.conf
+++ b/resources/zico/zico.conf
@@ -3,7 +3,22 @@
 {
 
  ; HTTP settings
- :http-conf { :port 8640 }
+ :http-conf {
+   :enabled? true
+   :port 8640
+ }
+
+ :https-conf {
+   :port 8643
+   :enabled? false
+   :addr "0.0.0.0"
+   :include-ciphers [
+     "TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256", "TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA",
+     "TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA384", "TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA",
+     "TLS_RSA_WITH_AES_128_CBC_SHA256", "TLS_RSA_WITH_AES_128_CBC_SHA",
+     "TLS_RSA_WITH_AES_256_CBC_SHA256", "TLS_RSA_WITH_AES_256_CBC_SHA"]
+   :include-protocols ["TLSv1", "TLSv1.1", "TLSv1.2"]
+ }
 
  ; HTTPS settings (when supported by
  ;:https
