HTTP server: migrate from httpkit/jetty to zorka netkit.

--- a/resources/zico/zico.conf
+++ b/resources/zico/zico.conf
@@ -4,35 +4,27 @@
 
  ; HTTP settings
  :http-conf {
-   :enabled? true
    :port 8640
+   :tls? false
+   :keystore "ssl.jks"
+   :keystore-pass "changeit"
+   :tls-ciphers [
+      "TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256", "TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA",
+      "TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA384", "TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA",
+      "TLS_RSA_WITH_AES_128_CBC_SHA256", "TLS_RSA_WITH_AES_128_CBC_SHA",
+      "TLS_RSA_WITH_AES_256_CBC_SHA256", "TLS_RSA_WITH_AES_256_CBC_SHA"]
+   :tls-protocols ["TLSv1", "TLSv1.1", "TLSv1.2"]
  }
-
- :https-conf {
-   :port 8643
-   :enabled? false
-   :addr "0.0.0.0"
-   :include-ciphers [
-     "TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256", "TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA",
-     "TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA384", "TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA",
-     "TLS_RSA_WITH_AES_128_CBC_SHA256", "TLS_RSA_WITH_AES_128_CBC_SHA",
-     "TLS_RSA_WITH_AES_256_CBC_SHA256", "TLS_RSA_WITH_AES_256_CBC_SHA"]
-   :include-protocols ["TLSv1", "TLSv1.1", "TLSv1.2"]
- }
-
- ; HTTPS settings (when supported by
- ;:https
 
  ; Logging settings
- :log-conf
- {
-  :level :info
-  :main
-  {:path "${zico.home}/log"
-   :backlog 8
-   :max-size 16777216
-  }
-  }
+ :log-conf {
+   :level :info
+   :main {
+     :path "${zico.home}/log"
+     :backlog 8
+     :max-size 16777216
+   }
+ }
 
  :auth {:auth :none}
 
