Switch to binary-only protocol. REST input: wrapper -> macro.

--- a/resources/zico/zico.conf
+++ b/resources/zico/zico.conf
@@ -8,6 +8,8 @@
    :tls? false
    :keystore "ssl.jks"
    :keystore-pass "changeit"
+   :worker-threads 16
+   :max-body 67108864                                       ; 64MB for big traces
    :tls-ciphers [
       "TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256", "TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA",
       "TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA384", "TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA",
@@ -31,13 +33,14 @@
  ; Configuration of main data store
  :trace-store {
                :path "${zico.home}/data/trace"
-               :nthreads 1         ; number of indexer threads (0 = run indexing in current thread);
+               :maint-threads 2
+               :maint-interval 10
                :session-timeout 120
 
                ; Sizes and
                :rotate {
-                        :max-size 16384   ; 16GB * 8 -> 128GB
-                        :max-num  8
+                        :max-size 8192   ; 16GB * 8 -> 128GB
+                        :max-num  16
                         }
 
                ; Text index parameters
