Shorten config section names.

--- a/resources/zico/zico.conf
+++ b/resources/zico/zico.conf
@@ -3,7 +3,7 @@
 {
 
  ; HTTP settings
- :http-conf {
+ :http {
    :port 8640
    :tls? false
    :keystore "ssl.jks"
@@ -19,7 +19,7 @@
  }
 
  ; Logging settings
- :log-conf {
+ :log {
    :level :info
    :main {
      :path "${zico.home}/log"
@@ -68,21 +68,18 @@
            :port 3306
            :mysqldump "/usr/bin/mysqldump"
            :mysql "/usr/bin/mysql"
+           :init-source :all    ; Source: :internal, :external, :all
+           :init-mode :append   ; Mode: :append, :overwrite, :skip
            }
 
- ; Database initialization options
- :zico-db-init {
-                :source :all                       ; Source: :internal, :external, :all
-                :mode :append                           ; Mode: :append, :overwrite, :skip
-                }
 
  ; Automated backup of configuration database and discovered items
- :backup-conf {
+ :backup {
                :path "${zico.home}/data/backup"
                :history 8
                }
 
- :agent-conf {
+ :agent {
               :register {
                          :host true
                          :app true
@@ -92,3 +89,4 @@
               }
 
  }
+
