Config file validation.

--- a/resources/zico/zico.conf
+++ b/resources/zico/zico.conf
@@ -30,8 +30,23 @@
 
  :auth {:auth :none}
 
+ :account {
+           :create? true
+           :update? true
+           :attrmap {
+                     :fullname ":givenName :sn"
+                     :comment "Automatically created from CAS 2.0"
+                     :email :email
+                     }
+           :rolemap {
+                     :attr :roles
+                     :admin  "APP_ZICO_ADMIN"
+                     :viewer "APP_ZICO_VIEWER"
+                     }
+           }
+
  ; Configuration of main data store
- :trace-store {
+ :tstore {
                :path "${zico.home}/data/trace"
                :maint-threads 2
                :maint-interval 10
