Migrate: netkit->jetty, clojure.spec->schema.core.

--- a/resources/zico/zico.conf
+++ b/resources/zico/zico.conf
@@ -5,17 +5,26 @@
  ; HTTP settings
  :http {
    :port 8640
-   :tls? false
+   :host "0.0.0.0"
+   :http? true
+   :ssl? false
+   :ssl-port 8643
+   :exclude-ciphers []
+   :exclude-protocols ["SSLv3" "TLSv1" "TLSv1.1"]
+   :join? false,
+   :daemon? false
    :keystore "ssl.jks"
-   :keystore-pass "changeit"
-   :worker-threads 16
-   :max-body 67108864                                       ; 64MB for big traces
-   :tls-ciphers [
-      "TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256", "TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA",
-      "TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA384", "TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA",
-      "TLS_RSA_WITH_AES_128_CBC_SHA256", "TLS_RSA_WITH_AES_128_CBC_SHA",
-      "TLS_RSA_WITH_AES_256_CBC_SHA256", "TLS_RSA_WITH_AES_256_CBC_SHA"]
-   :tls-protocols ["TLSv1", "TLSv1.1", "TLSv1.2"]
+   :key-password "changeit"
+   :min-threads 2
+   :max-threads 32
+   :max-queued-requests 256
+   :max-form-size 67108864                                       ; 64MB for big traces
+   ;:tls-ciphers [
+   ;   "TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256", "TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA",
+   ;   "TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA384", "TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA",
+   ;   "TLS_RSA_WITH_AES_128_CBC_SHA256", "TLS_RSA_WITH_AES_128_CBC_SHA",
+   ;   "TLS_RSA_WITH_AES_256_CBC_SHA256", "TLS_RSA_WITH_AES_256_CBC_SHA"]
+   ;:tls-protocols ["TLSv1", "TLSv1.1", "TLSv1.2"]
  }
 
  ; Logging settings
@@ -36,7 +45,7 @@
            :attrmap {
                      :fullname ":givenName :sn"
                      :comment "Automatically created from CAS 2.0"
-                     :email :email
+                     :email ":email"
                      }
            :rolemap {
                      :attr :roles
