Fix: path to backup scripts.

--- a/resources/zico/zico.conf
+++ b/resources/zico/zico.conf
@@ -98,7 +98,7 @@
 
  ; Automated backup of configuration database and discovered items
  :backup {
-               :path "${zico.home}/data/backup"
+               :path "data/backup"
                :history 8
                }
 
